--- a/GSP_SJ/App.config
+++ b/GSP_SJ/App.config
@@ -1,6 +1,72 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
-    </startup>
+
+	<appSettings>
+		<add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+	</appSettings>
+	<system.web>
+		<compilation debug="true" />
+	</system.web>
+	<!-- 部署服务库项目时，必须将配置文件的内容添加到
+ 主机的 app.config 文件中。System.Configuration 不支持库的配置文件。 -->
+	<system.serviceModel>
+		<client>
+   <endpoint address="http://localhost:8733/Design_Time_Addresses/MyTestWcfServiceLibrary/Service1/"
+    binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IMyFirstService"
+    contract="ServiceReference1.IMyFirstService" name="WSHttpBinding_IMyFirstService">
+    <identity>
+     <dns value="localhost" />
+    </identity>
+   </endpoint>
+  </client>
+  <services>
+			<service name="MyTestWcfServiceLibrary.MyFirstService">
+				<endpoint address="" binding="wsHttpBinding" bindingConfiguration="wsHttpBinding_IMyFirstService"
+        contract="MyTestWcfServiceLibrary.IMyFirstService">
+					<identity>
+						<dns value="localhost" />
+					</identity>
+				</endpoint>
+				<endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+				<host>
+					<baseAddresses>
+						<add baseAddress="http://localhost:8733/Design_Time_Addresses/MyTestWcfServiceLibrary/Service1/" />
+					</baseAddresses>
+				</host>
+			</service>
+		</services>
+		<bindings>
+   <wsHttpBinding>
+    <binding name="wsHttpBinding_IMyFirstService" closeTimeout="00:01:00"
+     openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+     bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
+     maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text"
+     textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
+     <security mode="None">
+      <transport clientCredentialType="None" proxyCredentialType="None"
+       realm="" />
+      <message clientCredentialType="None" negotiateServiceCredential="true"
+       algorithmSuite="Default" />
+     </security>
+    </binding>
+    <binding name="WSHttpBinding_IMyFirstService">
+     <security mode="None" />
+    </binding>
+   </wsHttpBinding>
+  </bindings>
+		<behaviors>
+			<serviceBehaviors>
+				<behavior>
+					<!-- 为避免泄漏元数据信息，
+          请在部署前将以下值设置为 false -->
+					<serviceMetadata httpGetEnabled="True" httpsGetEnabled="True"/>
+					<!-- 要接收故障异常详细信息以进行调试，
+          请将以下值设置为 true。在部署前设置为 false 
+          以避免泄漏异常信息 -->
+					<serviceDebug includeExceptionDetailInFaults="False" />
+				</behavior>
+			</serviceBehaviors>
+		</behaviors>
+	</system.serviceModel>
+
 </configuration>
