--- a/GSP_SJ/GSP_SJ.csproj
+++ b/GSP_SJ/GSP_SJ.csproj
@@ -33,11 +33,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ComponentFactory.Krypton.Toolkit">
+      <HintPath>..\..\..\吸嘴清洗机\双轴换控件版\Bin\ComponentFactory.Krypton.Toolkit.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Design" />
     <Reference Include="System.Management" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml.Linq" />
@@ -51,16 +56,166 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bas_CompensationValue.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Bas_Customer.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Bas_DicIndex.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Bas_DicItem.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Bas_DicRegister.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Bas_Material.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
     <Compile Include="Connected Services\ServiceReference1\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_Bom.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_BomECN.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_BomReplace.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_BomSub.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_Material.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_Meter.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_MeterOption.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_MeterOptionItem.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_Model.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_ModelItem.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_ParseRule.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_ParseRuleExpression.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_ParseRuleReplace.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_ParseRuleSeparator.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_ParseRuleToleranceC.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_ParseRuleToleranceL.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_ParseRuleToleranceR.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_PictureLibrary.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_Program.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_ProgramLog.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_ProgramOption.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_ProgramOptionPicture.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_PubModel.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_PubModelItem.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_Replace.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_StationTable.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_StationTableItem.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Eng_XYData.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="FAI_DB.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FAI_DB.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="FAI_DB.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="FAI_DB.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FAI_DB.edmx</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormTest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTest.Designer.cs">
+      <DependentUpon>FormTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GetPoints_Result.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Man_ComponentCheck.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Man_ComponentPackaging.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Man_ComponentSize.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Man_ComponentSizeItem.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Man_Report.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Man_ReportInspectionItems.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Man_ReportItem.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Man_ReportLog.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="ProjectInstaller.cs">
@@ -76,8 +231,56 @@
     <Compile Include="Service1.Designer.cs">
       <DependentUpon>Service1.cs</DependentUpon>
     </Compile>
+    <Compile Include="SplitStr_Result.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sp_helpdiagramdefinition_Result.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sp_helpdiagrams_Result.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sysdiagrams.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Sys_Error.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Sys_Help.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Sys_Lang.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Sys_Log.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Sys_Option.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Sys_OptionDDLB.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Sys_Power.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Sys_Role.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Sys_RolePower.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Sys_User.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Sys_UserLog.cs">
+      <DependentUpon>FAI_DB.tt</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormTest.resx">
+      <DependentUpon>FormTest.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ProjectInstaller.resx">
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
@@ -101,6 +304,13 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Connected Services\ServiceReference1\MyFirstService.wsdl" />
+    <EntityDeploy Include="FAI_DB.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>FAI_DB.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="FAI_DB.edmx.diagram">
+      <DependentUpon>FAI_DB.edmx</DependentUpon>
+    </None>
     <None Include="Properties\DataSources\MyTestWcfServiceLibrary.CompositeType.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -145,6 +355,29 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="FAI_DB.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>FAI_DB.edmx</DependentUpon>
+      <LastGenOutput>FAI_DB.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="FAI_DB.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>FAI_DB.edmx</DependentUpon>
+      <LastGenOutput>FAI_DB.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="EntityFramework">
+      <Version>6.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="EntityFramework.zh-Hans">
+      <Version>6.2.0</Version>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
